Pull up following revision(s) (requested by tsutsui in ticket #1484): 	sys/arch/hpcmips/dev/plumohci.c: revision 1.13 Remove (possibly) unnecessary boundary arg from bus_space_alloc(9) for DMA shared memory. PR port-hpcmips/43473 by Risto Sainio.