sys/arch/hpcmips/dev/plumohci.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: plumohci.c,v 1.12 2008/04/03 17:04:40 drochner Exp $ */
+/*	$NetBSD: plumohci.c,v 1.12.14.1 2010/11/26 17:14:01 riz Exp $ */
 
 /*-
  * Copyright (c) 2000 UCHIYAMA Yasushi
@@ -35,7 +35,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: plumohci.c,v 1.12 2008/04/03 17:04:40 drochner Exp $");
+__KERNEL_RCSID(0, "$NetBSD: plumohci.c,v 1.12.14.1 2010/11/26 17:14:01 riz Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -241,7 +241,7 @@ __plumohci_dmamem_alloc(bus_dma_tag_t tx, bus_size_t size,
 	 */
 	error = bus_space_alloc(sc->sc.iot, PLUM_OHCI_SHMEMBASE,
 	    PLUM_OHCI_SHMEMBASE + PLUM_OHCI_SHMEMSIZE - 1,
-	    size, OHCI_PAGE_SIZE, OHCI_PAGE_SIZE, 0,
+	    size, OHCI_PAGE_SIZE, 0, 0,
 	    (bus_addr_t *)(void *)&caddr, &bsh);
 	if (error)
 		return (1);
